Front End implementation.
Header section and vehicle interface.

--- a/asset-mate-web/src/app/app.component.html
+++ b/asset-mate-web/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>Welcome to {{title}}</h1>
+<app-header></app-header>
+
+<div class="container-fluid" style="margin-top: 120px;">
+  <h1>Welcome to {{title}}</h1>
+  <ul>
+    <li class="list-unstyled" *ngFor="let vehicle of vehicles">
+      {{vehicle.make}}
+    </li>
+  </ul>
+</div>
